# lulz

./: .ccls  .gitignore  CMakeLists.txt  Cargo.toml  a.out  build_api.py  grammar.ebnf  jit.py  license.txt  lol.out  main-c  out  readme.md  run_perfs.py  run_tests.py
.github/workflows/: benches.yml  tests.yml
benches/: bf.lol  fib.lol  readme.md  run_benches.py
benches/bf/: bf.lci.lol  bf.lol
benches/sorting/: sort.lol
perfs/: fib.lol  fib.py  gen.py
perfs/fib/: fib.lci.lol  fib.lol  fib.py  values.json
src/: ast.rs  bytecode.py  bytecode_compiler.rs  color.rs  compiler.py  debug.py  diagnostics.rs  err.rs  error.py  lex.rs  main.py  main.rs  opts.rs  parse.rs  scanner.py  sourcemap.rs  value.py  vm.py
src/backend/: builtins.rs  c_builder.rs  c_compile.rs  interner.rs  lco.rs  mod.rs  translate.rs  translator.rs
src/clib/: builtins.clol  check_args.clol  closure.clol  dec_closure.clol  dec_dyn_function.clol  dyn_function.clol  lol_gc.c  lol_gc.h  lol_ops.c  lol_ops.h  lol_opts.c  lol_opts.h  lol_runtime.c  lol_runtime.h  main.clol
src/frontend/: ast.rs  lex.rs  parse.rs
src/interpret/: expressions.rs  helpers.rs  mod.rs  statements.rs
src/lolbc/: bits.rs  chunk.rs  disasm.rs  mod.rs  opcodes.rs  values.rs
src/lolvm/: frame.rs  interner.rs  lol_vm.rs  mod.rs  stack.rs
src/middle/: bytecode_compiler.rs  interner.rs  lower.rs  mod.rs  optimize_ast.rs  optimize_bc.rs
src/runtime/: builtins.rs  errors.rs  mod.rs
tests/: gimmeh.lol  it_tests.lol  readme.md  run_tests.py  visible.lol
tests/closures/: closure_call.lol  fail_same_scope.lol  multi_layer.lol  not_poped.lol  not_poped_args.lol  not_poped_mutate.lol  not_poped_nested.lol  recursive_closure.lol  reverse_access.lol  reverse_access_rec.lol  runaway_mutate.lol  simple.lol  simple_it.lol
tests/comments/: doubled_from_comment.lol  intentation.lol  multiline.lol  singleline.lol
tests/control/: else_if.lol  fail_if_scoping.lol  if.lol  if_else.lol  if_scoping.lol
tests/exprs/: simple_expr.lol
tests/functions/: all_local_scope.lol  arguments.lol  as_value.lol  basic.lol  basic_basic.lol  empty.lol  fail_as_value_wrong_args.lol  fail_out_of_scope.lol  fail_too_many_args.lol  fail_too_many_args_call.lol  fail_undefined_fn.lol  fail_wrong_no_args.lol  globals.lol  gtfo.lol  it_implicit.lol  many_args.lol  recursion.lol  returns.lol  scope_basic.lol
tests/io/: input.lol  visible.lol  visible_multi.lol  visible_number.lol
tests/it/: basic_expr.lol  switch.lol
tests/lizt/: accessing.lol  fail_assign_bak_out_of_range.lol  fail_assign_frunt_out_of_range.lol  fail_assign_out_of_range.lol  fail_bak_out_of_range.lol  fail_frunt_out_of_range.lol  fail_out_of_range.lol  frunt_back.lol  init.lol  length.lol  list_literal.lol  pass_by_ref.lol  push.lol  setters.lol
tests/perf/: fib.lol  gen.py  many_strings.lol
tests/strings/: beep.lol  fail_hex_interp_1.lol  fail_hex_interp_2.lol  fail_interp_no_def.lol  fail_interpolation_1.lol  fail_interpolation_2.lol  fail_interpolation_3.lol  fail_uni_norm_1.lol  fail_uni_norm_2.lol  hex_interp.lol  interpolation.lol  length.lol  (+2 more)
(+61 files in other folders)
