[package]
name = "lulz"
version = "0.1.0"
authors = ["Jonathan Li <30177086+MonliH@users.noreply.github.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/MonliH/lulz"

exclude = [
    "assets/*",
]

[dependencies]
codespan-reporting = "0.11.1"
once_cell = "1.8.0"
smallvec = "1"
unicode_names2 = "0.4.0"
pico-args = { version = "0.4.1", features = ["short-space-opt"] }
hashbrown = "0.11.2"
libc = "0.2"
mlua = { git = "https://github.com/khvzak/mlua.git", features = ["luajit52"] }

[profile.release]
lto = true
